# emby

./: .gitignore  CMakeLists.txt  README  README.md  cleanall.sh  compile_h5x.sh  compile_h743.sh  compile_l4x.sh  compile_x86.sh
docs/: CMAKE_MACRO.md  PLATFORM.md  menu-tool.md
emby/: README.TXT  emby-core.cmake  emby-utils.cmake  emby.cmake  toolchain.cmake
emby/Include/: Emby.hh
emby/PlatformAgnostic/EmbyConsole/: Console.cc  Console.hh  ConsoleCommands.cc  ConsoleWorker.cc  ConsoleWorker.hh
emby/PlatformAgnostic/EmbyDebug/: assert.cc
emby/PlatformAgnostic/EmbyExec/: ListenersHandler.hh  Message.cc  Message.hh  MessageBroker.cc  MessageBroker.hh
emby/PlatformAgnostic/EmbyLibs/: BitConverter.hh  BitMask.hh  Buffer.hh  ByteBuffer.hh  Callback.hh  CharBuffer.hh  CircularBuffer.hh  IOutput.hh  JsonReader.cc  JsonReader.hh  JsonWriter.cc  JsonWriter.hh  OutputFormatter.cc  OutputFormatter.hh  Singleton.hh  String.cc  StringUtils.cc  StringUtils.hh  fourcc.hh
emby/PlatformAgnostic/EmbyLog/: Clog.cc  Clog.hh  Log.hh  LogBus.cc  LogBus.hh  LogLevel.hh  LogMessage.cc  LogProcessor.cc  LogProcessor.hh  LogProcessorQueue.hh
emby/PlatformAgnostic/EmbyMachine/: AtChat.cc  AtChat.hh  AtChatSerial.hh  CrcComputer.cc  CrcComputer.hh  EmbyMachine.defines  EmbyMachine.hh  Gpio.hh  Serial.hh  WatchDog.hh
emby/PlatformAgnostic/EmbySystem/: ErrorCode.cc  ErrorCode.hh  System.hh  SystemError.cc  SystemError.hh  SystemErrorHandler.cc  SystemErrorHandler.hh  Timer.hh
emby/PlatformAgnostic/EmbyTest/Buffer/: CMakeCache.txt  CMakeLists.txt  Makefile  Test_Buffer.cc  clean.sh  cmake_install.cmake
emby/PlatformAgnostic/EmbyTest/CircularBuffer/: CMakeLists.txt  Test_CircularBuffer.cc  clean.sh
emby/PlatformAgnostic/EmbyTest/Datetime/: CMakeLists.txt  Test_Datetime.cc
emby/PlatformAgnostic/EmbyTest/Strings/: CMakeLists.txt  Test_String.cc  clean.sh
emby/PlatformAgnostic/EmbyThreading/: Flags.cc  Flags.hh  Mutex.hh  ScopedMutex.hh  Semaphore.hh  Thread.hh  Worker.cc  Worker.hh
emby/PlatformAgnostic/EmbyTime/: Clock.hh  Countdown.hh  Date.cc  Date.hh  DateTime.cc  DateTime.hh  Millis.hh  Time.hh
emby/PlatformSpecific/Mbed/: emby-platform.cmake
emby/PlatformSpecific/Mbed/EmbyMachine/: SerialImpl.hh
emby/PlatformSpecific/Mbed/EmbySystem/: EmbySystem_Impl.hh  System.cc  Timer.cc  TimerImpl.hh
emby/PlatformSpecific/Mbed/EmbyThreading/: Mutex.cc  Mutex_Impl.hh  Semaphore.cc  Semaphore_Impl.hh
emby/PlatformSpecific/STM32L4x_FreeRTOS/: emby-platform.cmake
emby/PlatformSpecific/STM32L4x_FreeRTOS/EmbyMachine/: I2cBus_Impl.hh  Serial.cc  SerialImpl.hh  WatchDog.cc
emby/PlatformSpecific/STM32L4x_FreeRTOS/EmbySystem/: EmbySystem_Impl.hh  System.cc  Timer.cc  TimerImpl.hh
emby/PlatformSpecific/STM32L4x_FreeRTOS/EmbyThreading/: Flags.cc  Flags_Impl.hh  Mutex.cc  Mutex_Impl.hh  Semaphore.cc  Semaphore_Impl.hh  Thread.cc  Thread_Impl.hh
emby/PlatformSpecific/STM32L4x_FreeRTOS/EmbyTime/: Clock.cc  Clock_Impl.hh
emby/PlatformSpecific/STM32L4x_FreeRTOS/FreeRTOS/: OsHook.cpp
emby/PlatformSpecific/STM32L4x_FreeRTOS/Startup/: stm32l4xx_it.c  stm32l4xx_it.h
emby/PlatformSpecific/STM32L4x_FreeRTOS/conf_template/: FreeRTOSConfig.h  stm32l4xx_hal_conf.h
emby/PlatformSpecific/STM32xx_Baremetal/: emby-platform.cmake
emby/PlatformSpecific/STM32xx_Baremetal/EmbyMachine/: I2cBus_Impl.hh  Serial.cc  SerialImpl.hh  WatchDog.cc
emby/PlatformSpecific/STM32xx_Baremetal/EmbySystem/: System.cc
emby/PlatformSpecific/STM32xx_Baremetal/EmbyThreading/: Mutex.cc  Semaphore_Impl.hh  Thread.cc
emby/PlatformSpecific/STM32xx_Baremetal/EmbyTime/: Clock.cc  Clock_Impl.hh
emby/PlatformSpecific/X86_Linux/EmbyMachine/: I2cBus_Impl.hh
emby/PlatformSpecific/X86_Linux/EmbySystem/: System.cc
emby/PlatformSpecific/X86_Linux/EmbyThreading/: Semaphore.cc  Semaphore_Impl.hh  Thread.cc  Thread_Impl.hh
emby/PlatformSpecific/X86_Linux/EmbyTime/: Clock.cc
emby/PlatformSpecific/X86_Unix/: emby-platform.cmake
emby/PlatformSpecific/X86_Unix/EmbyLog/: StdLogProcessor.hh
emby/PlatformSpecific/X86_Unix/EmbyMachine/: I2cBus_Impl.hh  Serial.cc  SerialImpl.hh
emby/core/EmbyConfig/: config_template.hh
emby/core/EmbyConsole/: Console.cc  Console.hh  ConsoleCommands.cc  ConsoleCommands.hh  ConsoleUart.cc  ConsoleUart.hh  ConsoleWorker.cc  ConsoleWorker.hh
emby/core/EmbyDebug/: assert.cc  assert.hh
emby/core/EmbyExec/: Message.cc  Message.hh  MessageBroker.hh  MessageDictionary.hh
emby/core/EmbyLibs/: Buffer.hh  ByteBuffer.hh  CharBuffer.hh  CircularBuffer.hh  IOutput.hh  JsonReader.hh  JsonWriter.cc  JsonWriter.hh  OutputFormatter.hh  SimpleObjectPool.hh  Singleton.hh  String.hh  StringPool.hh  StringUtils.cc  StringUtils.hh
emby/core/EmbyLog/: Clog.hh  Log.cc  Log.hh  LogBus.cc  LogBus.hh  LogClass.hh  LogClassUtils.cc  LogClassUtils.hh  LogMessage.cc  LogMessage.hh  LogProcessor.cc  LogProcessor.hh  LogProcessorQueue.cc
emby/core/EmbyMachine/: Button.cc  Button.hh  EmbyMachine.cc  EmbyMachine.hh  Serial.hh
emby/core/EmbyNetwork/: ClientTCP.hh  NetInterface.hh  NetSocket.hh  NetUtils.hh  ServerTCP.hh  SocketPool.cc  SocketPool.hh  SocketTCP.hh  SocketUDP.hh
emby/core/EmbySystem/: ErrorCode.cc  ErrorCode.hh  System.cc  System.hh  Timer.hh
emby/core/EmbyTest/: emby-test.cmake
emby/core/EmbyTest/Strings/: Test_String.cc
emby/core/EmbyThreading/: Flags.hh  Mutex.hh  ScopedMutex.hh  Semaphore.hh  Thread.hh  Worker.cc
emby/core/EmbyTime/: Clock.hh  Countdown.hh  Date.cc  DateTime.cc  Millis.hh  Time.hh  TimeStamp.hh
emby/misc/tools/: CONFIG_PATH  emby_config.h  emby_config_menu.sh  menu.sh
emby/platform/Mbed/: emby-platform.cmake
emby/platform/STM32xx_Baremetal/: emby-platform.cmake
emby/platform/X86_Unix/: emby-platform.cmake
src/: MainWorker.cc  MainWorker.hh  emby_config.h  main.cc
src/Console/: ConsoleCommands.cc  ConsoleCommands.hh
src/platform/x86/: EmbyAppMachine.cc  app-platform.cmake
src/stm32l431cc/: EmbyAppMachine.cc  FreeRTOSConfig.h  STM32L431CCTX_FLASH.ld  stm32l4xx_hal_conf.h
src/stmH563ZI/: EmbyAppMachine.cc  STM32H563ZITX_FLASH.ld  stm32h5xx_hal_conf.h
(+70 files in other folders)
